# Geralds_Helper

./: .pending_commit_message.txt  COPILOT_INSTRUCTIONS.md  README.md  latest_club_overview.html  pyproject.toml  requirements.txt  run_gui.py  usefule_commands.txt
config/: app_settings.json
experiment/: match_plan_L2P_20336_half_1.html  match_plan_L2P_20336_half_2.html  match_plan_L2P_20337_half_1.html  match_plan_L2P_20337_half_2.html  match_plan_L2P_20459_half_1.html  match_plan_L2P_20459_half_2.html  match_plan_L2P_20464_half_1.html  match_plan_L2P_20464_half_2.html  match_plan_L2P_20465_half_1.html  match_plan_L2P_20465_half_2.html  match_plan_L2P_20469_half_1.html  match_plan_L2P_20469_half_2.html  match_plan_L2P_20473_half_1.html  match_plan_L2P_20473_half_2.html  match_plan_L2P_20477_half_1.html  match_plan_L2P_20477_half_2.html  match_plan_L2P_21137_half_1.html  match_plan_L2P_21137_half_2.html  ranking_table_1_Bezirksliga_Erwachsene.html  team_roster_1_Bezirksliga_Erwachsene_ESV_Delitzsch_128805.html  team_roster_1_Bezirksliga_Erwachsene_LTTV_Leutzscher_Füchse_1990_2_128854.html  team_roster_1_Bezirksliga_Erwachsene_LTTV_Leutzscher_Füchse_1990_3_128855.html  team_roster_1_Bezirksliga_Erwachsene_SSV_Stötteritz_129868.html  team_roster_1_Bezirksliga_Erwachsene_SV_Arzberg_129095.html  team_roster_1_Bezirksliga_Erwachsene_SV_Groitzsch_1861_129200.html  team_roster_1_Bezirksliga_Erwachsene_SV_Rotation_Süd_Leipzig_3_129284.html  team_roster_1_Bezirksliga_Erwachsene_TTC_Großpösna_1968_129451.html  team_roster_1_Bezirksliga_Erwachsene_TTC_Großpösna_1968_2_129452.html  team_roster_1_Bezirksliga_Erwachsene_TTC_Oschatz_128910.html  team_roster_1_Stadtliga_Gruppe_1_LTTV_Leutzscher_Füchse_1990_7_128859.html  team_roster_1_Stadtliga_Gruppe_1_LTTV_Leutzscher_Füchse_1990_9_128861.html  team_roster_1_Stadtliga_Gruppe_1_MDR_Sportgemeinschaft_129864.html  (+78 more)
(+70 files in other folders)
