[project]
name = "table-tennis-team-manager"
version = "0.1.0"
description = "Table Tennis Team Management Tool with PyQt6 GUI, scraping, and optimization"
authors = [{name = "ChubbyChuckles", email = "christian.rickert.1989@gmail.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "PyQt6>=6.7.0,<7.0.0",
    "requests>=2.32.0,<3.0.0",
    "beautifulsoup4>=4.12.0,<5.0.0",
    "pandas>=2.2.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0,<9.0.0",
    "types-requests",
    "types-beautifulsoup4",
]

[project.urls]
Homepage = "https://github.com/ChubbyChuckles-Inc/Geralds_Helper"
Repository = "https://github.com/ChubbyChuckles-Inc/Geralds_Helper"
Issues = "https://github.com/ChubbyChuckles-Inc/Geralds_Helper/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py313']

[tool.flake8]
max-line-length = 100
extend-ignore = "E203"
exclude = [
    ".venv",
    ".pytest_cache",
    "bootstrap.py",
    "docs/source/conf.py",
]

[tool.pylint]
ignore = [
    "docs/source/conf.py",
    "tests/__init__.py",
    "src/__init__.py",
    "src/config/",
    "bootstrap.py",
]
ignore-patterns = [
    ".*_generated\\.py$",
]
max-line-length = 100
disable = [
    "C0114",  # Missing module docstring
    "F0401",  # Unable to import (import-error)
    "E0611",  # No name in module (no-name-in-module)
]

[tool.mypy]
python_version = "3.13"
strict = true
show_error_codes = true
disable_error_code = [
    "import",
]
exclude = [
    "docs/source/conf.py",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
